--- a/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -27,6 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/goals']">
+                        <span class='glyphicon glyphicon-th-list'></span> Goals
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
