angular app is posting and getting - home pages updated

--- a/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/home/home.component.html
+++ b/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/home/home.component.html
@@ -1,16 +1,143 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-    <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-    <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-    <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
-    <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-    <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-    <li><strong>Server-side prerendering</strong>. For faster initial loading and improved SEO, your Angular app is prerendered on the server. The resulting HTML is then transferred to the browser where a client-side copy of the app takes over.</li>
-    <li><strong>Webpack dev middleware</strong>. In development mode, there's no need to run the <code>webpack</code> build tool. Your client-side resources are dynamically built on demand. Updates are available as soon as you modify any file.</li>
-    <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Angular app will be rebuilt and a new instance injected is into the page.</li>
-    <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
-</ul>
+<div class="panel panel-primary" style="background-color:rgba(255,255,255,0.8);">
+    <div class="panel-heading">
+        Welcome
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class='col-md-12'>
+                <h1 id="ProgressDemoMainHeader" style="font-family: 'open sans',sans-serif;">Personal Progress Demo - Angular</h1>
+
+                <p><i>(Start demo by clicking the 'Add a Goal' link to the left)</i></p>
+
+                <ul>
+                    <li>Microsoft Technologies (ASP.NET Core 2 MVC / WebAPI / EF to SQL Server)</li>
+                    <li>Open Source Technologies (Node.js (for tooling), Angular(4), TypeScript, WebPack, Gulp)</li>
+                </ul>
+
+                <p>
+                    This website is a technology demo showcasing the full-stack development of a small website. It comprises an Asp.Net Core 2
+                    back-end paired with an Angular UI.  The intended audience are technologists who will have relevant knowledge and experience
+                    of the subject matter.
+                </p>
+
+                <p>
+                    This app is intentionally simple - the purpose of this demo is not an extensive
+                    end-product, but rather a showcase of a vertical stack.  This, alongside the
+                    architecture, technology stack and development processes that underpin the system, presents a near complete
+                    solution. It would now be straightforward to scale this up and
+                    develop a significantly larger and more complex application.
+                </p>
+
+
+                <p>
+                    <b>
+                        You can find the entire open-source for this project here:
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard">https://github.com/ Layla-P/ PersonalProgressDashboard</a>
+                    </b>
+                </p>
+
+            </div>
+           
+        </div>
+    </div>
+</div>
+
+
+
+<div class="panel panel-primary" style="background-color:rgba(255,255,255,0.8);">
+    <div class="panel-heading">
+        Features
+    </div>
+    <div class="panel-body">
+
+
+        <div class="row">
+
+            <div class="col-md-4" style="padding:20px;">
+
+                <h3>
+                    Back-end :
+                </h3>
+                <ul>
+
+                    <li>Entity-Framework Core (Code-First) to an MS SqlServer Db</li>
+                    <li>
+                        Fluent-API to describe the database (as opposed to use of "data-annotations"" on domain models).
+                        <br />
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard/tree/master/src/PersonalProgressDashboard.Data/EntitiesConfigurations" target="_blank">
+                            <i class="fa fa-hand-pointer-o fa-lg"></i> See "PersonalProgressDashboard.Data/ EntityConfigurations".
+                        </a>
+                    </li>
+
+                    <li>
+                        Database repository-pattern.
+                        <br />
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard/tree/master/src/PersonalProgressDashboard.Data/Repositories" target="_blank">
+                            <i class="fa fa-hand-pointer-o fa-lg"></i> See "PersonalProgressDashboard.Data/ Repositories".
+                        </a>
+                    </li>
+                   
+                    <li>
+                        WebAPI is used to present a Restful api layer to the client application.
+                        <br />
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard/tree/master/src/PersonalProgressDashboard.Api/Controllers" target="_blank">
+                            <i class="fa fa-hand-pointer-o fa-lg"></i>
+                            <i>See "PersonalProgressDashboard.Api" project.</i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-4" style="padding:20px;">
+
+                <h3>
+                    Environment :
+                </h3>
+                <ul>
+                    <li>Developed using a primarily Visual Studio 2017</li>
+                    <li>
+                        Hosted in Azure, using App services (a "Web App" and separate "API App")
+                        alongside an Azure SQL Db.
+                    </li>
+                    <li>Development using GitHub for source control (using branches for CI workflow).</li>
+                    <li>Master branch on GitHub is associated via an Azure-KUDU-based CI, deploying directly to production websites.</li>
+                    <li>
+                        TWO WEBSERVERS :   The main website is a separate VS project/server to the server hosting the WebAPI.
+                        Clearly overkill for a microsite like this, it is intended to demonstrate that you can scale the two interconnected
+                        systems in the cloud separately (e.g. if your api is being heavily loaded).
+                        <br />
+                        <i class="fa fa-hand-pointer-o fa-lg"></i> CORS is used to allow cross domain access.
+                        <br />
+                        <i class="fa fa-hand-pointer-o fa-lg"></i> Azure is configured to deploy the appropriate project to appropriate servers.
+                    </li>
+                    <li>User auth has been implented using dotnet identity provider and JWT tokens.  The front end is yet to be tied in</li>
+                    <li>Logging has not yet been added to this demo, that will come later.</li>
+                </ul>
+            </div>
+
+            <div class="col-md-4" style="padding:20px;">
+                <h3>
+                    Client-side application and build process :
+                </h3>
+
+                <ul>
+                    <li>
+                        Angular app written with Typescript; work in progress
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard/tree/master/src/PersonalProgressDashboard.web.Angular/ClientApp" target="_blank">
+                            <i class="fa fa-hand-pointer-o fa-lg"></i>
+                            <i>See "App" sub-project.</i>
+                        </a>
+                    </li>
+
+                    <li>
+                        "WebPack" package building, to bundle the project (individual code and html templates) into a single js package.
+                    </li>
+
+                    <li>
+                        "Bootstrap" and "Font-Awesome" for responsive UI.
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
