--- a/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,18 +18,13 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetchdata']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/goals']">
                         <span class='glyphicon glyphicon-th-list'></span> Goals
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/addgoal']">
+                        <span class='glyphicon glyphicon-th-list'></span> Add a Goal
                     </a>
                 </li>
             </ul>
