sorted date issue - sort of...

--- a/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/addgoals/addgoals.component.html
+++ b/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/addgoals/addgoals.component.html
@@ -11,7 +11,8 @@
     <div class="form-group">
         <label >Achieve By Date</label>
         <input type="text" class="form-control" formControlName="achieveByDate"
-               name="achieveByDate">
+               name="achieveByDate" placeholder="yyyy-MM-dd">
+        <small>Please enter date in the following format: yyyy-MM-dd</small>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
