--- a/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/addgoals/addgoals.component.html
+++ b/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/addgoals/addgoals.component.html
@@ -1,18 +1,30 @@
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+
 <h1>Add a Goal</h1>
 
+<div *ngIf="submitted">Your goal has been added, good luck!</div>
 
-<form [formGroup]="goalForm" novalidate (ngSubmit)="save(goalForm.value, true)">
+<form *ngIf="!submitted" [formGroup]="goalForm" novalidate (ngSubmit)="save(goalForm.value, true)">
     <div class="form-group">
-        <label >Goal</label>
+        <label>Goal</label>
         <input type="text" class="form-control" formControlName="goalText"
                required
                name="goalText">
     </div>
-    <div class="form-group">
-        <label >Achieve By Date</label>
-        <input type="text" class="form-control" formControlName="achieveByDate"
-               name="achieveByDate" placeholder="yyyy-MM-dd">
-        <small>Please enter date in the following format: yyyy-MM-dd</small>
+    <div class="form-inline">
+        <label  style="width:100%; display:block">Achieve By Date</label>
+        <input type="text" class="form-control" style="width:10%" formControlName="achieveByDateDay"
+               name="achieveByDateDay" placeholder="dd">      
+        <input type="text" class="form-control" style="width:10%" formControlName="achieveByDateMonth"
+               name="achieveByDateMonth" placeholder="MM">
+        <input type="text" class="form-control" style="width:10%" formControlName="achieveByDateYear"
+               name="achieveByDateYear" placeholder="yyyy">
+    </div>   
+
+    <button type="submit" class="btn btn-primary" style="margin-top:20px;margin-bottom:20px;">Submit</button>
+    <div class="well well-sm">
+        <p *ngIf="errorMessage.day !== ''">{{errorMessage.day}}</p>
+        <p *ngIf="errorMessage.month !== ''">{{errorMessage.month}}</p>
+        <p *ngIf="errorMessage.year !== ''">{{errorMessage.year}}</p>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
