updated home text on angular project

--- a/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/home/home.component.html
+++ b/src/PersonalProgressDashboard.web.Angular/ClientApp/app/components/home/home.component.html
@@ -111,7 +111,19 @@
                         <i class="fa fa-hand-pointer-o fa-lg"></i> Azure is configured to deploy the appropriate project to appropriate servers.
                     </li>
                     <li>User auth has been implented using dotnet identity provider and JWT tokens.  The front end is yet to be tied in</li>
-                    <li>Logging has not yet been added to this demo, that will come later.</li>
+                    <li>A LogHelper has been added to a new Common project and has been lightly implemented. Logging and general data checking needs further implementation across the various projects.
+                        <br />
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard/tree/master/src/PersonalProgressDashboard.Common" target="_blank">
+                            <i class="fa fa-hand-pointer-o fa-lg"></i>
+                            <i>See "PersonalProgressDashboard.Coomon" project.</i>
+                        </a>
+                    </li>
+                    <li>Nominal unit tests have been added to a test project.
+                        <br />
+                        <a href="https://github.com/Layla-P/PersonalProgressDashboard/tree/master/tests/PersonalProgressDashboard.Api.Tests" target="_blank">
+                            <i class="fa fa-hand-pointer-o fa-lg"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
